[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/ArrowButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sprites/arrow_left_frames.tres" type="SpriteFrames" id=2]
[ext_resource path="res://Sprites/arrow_right_frames.tres" type="SpriteFrames" id=3]
[ext_resource path="res://Sprites/road.png" type="Texture" id=4]
[ext_resource path="res://Sounds/song.ogg" type="AudioStream" id=5]
[ext_resource path="res://Scripts/Game.gd" type="Script" id=6]
[ext_resource path="res://Sprites/arrow_up_frames.tres" type="SpriteFrames" id=7]
[ext_resource path="res://Scenes/Conductor.tscn" type="PackedScene" id=8]

[node name="Game" type="Node2D"]
script = ExtResource( 6 )

[node name="road" type="Sprite" parent="."]
position = Vector2( 100, 0 )
texture = ExtResource( 4 )
centered = false

[node name="ArrowUp" parent="." instance=ExtResource( 1 )]
position = Vector2( 160, 164 )
frames = ExtResource( 7 )
input = "up"

[node name="ArrowLeft" parent="." instance=ExtResource( 1 )]
position = Vector2( 120, 164 )
frames = ExtResource( 2 )
input = "left"

[node name="ArrowButton" parent="." instance=ExtResource( 1 )]
position = Vector2( 200, 164 )
frames = ExtResource( 3 )
input = "right"

[node name="Label" type="Label" parent="."]
margin_left = 86.0
margin_top = 100.0
margin_right = 126.0
margin_bottom = 114.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 21.0
margin_top = 2.0
margin_right = 61.0
margin_bottom = 16.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Combo" type="Label" parent="."]
margin_left = 4.0
margin_top = 20.0
margin_right = 96.0
margin_bottom = 34.0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Conductor" parent="." instance=ExtResource( 8 )]
stream = ExtResource( 5 )
volume_db = -15.0
bpm = 115

[node name="Button" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = 17.0
margin_top = 37.0
margin_right = 175.0
margin_bottom = 77.0

[connection signal="beat" from="Conductor" to="." method="_on_Conductor_beat"]
[connection signal="measure" from="Conductor" to="." method="_on_Conductor_measure"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
